# ed25519-donna

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
modules/: functions.cmake
test/: CMakeLists.txt  rfc8032.cpp  test_util.hpp
